test/types/bool/boolWithSize.chpl
config param width = 8;
var b: bool;
var b_n: bool(width);
writeln((b, b_n));
